# 2022-04-otus-rust-lyubanevich

./: README.md
Homework #10/examples/: dynamic_visitor.rs  static_visitor.rs
Homework #12/examples/: devices_report.rs  socket_tcp_receiver.rs
Homework #13/: .env  Cargo.toml  smarthome.db
Homework #13/examples/: warp_server.rs
Homework #13/migrations/: 20220825161145_smarthome.sql
Homework #13/src/: lib.rs
Homework #13/src/core/: device.rs  mod.rs  room.rs  smarthome.rs
Homework #13/src/core/errors/: mod.rs
Homework #13/src/core/services/: mod.rs
Homework #13/src/core/traits/: mod.rs
Homework #13/src/database/: mod.rs
Homework #13/src/database/errors/: mod.rs
Homework #13/src/database/models/: mod.rs
Homework #13/src/database/repository/: mod.rs
Homework #13/src/database/sqlite/: mod.rs
Homework #13/src/database/traits/: mod.rs
Homework #13/src/devices/: mod.rs  thermometer.rs
Homework #13/src/provider/errors/: mod.rs
Homework #13/src/webserver/: mod.rs
Homework #13/src/webserver/filters/: mod.rs
Homework #13/src/webserver/handlers/: mod.rs
Homework #13/src/webserver/models/: mod.rs
Homework #13/src/webserver/traits/: mod.rs
Homework #13/tests/: smarthome.rs
Homework #14/: .env  Cargo.toml
Homework #14/examples/: iced_gui.rs  socket_tcp_receiver.rs
Homework #15/: Cargo.toml
Homework #15/application/: Cargo.toml
Homework #2/src/: lib.rs
Homework #3/examples/: devices_report.rs
Homework #3/src/: lib.rs
Homework #6/: Cargo.toml
Homework #7/: Cargo.toml
Homework #8/: Protocol.txt
Homework #9/: Cargo.toml
(+86 files in other folders)
