[package]
name = "smart_home"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.*"
tokio = { version = "1.19.*", features = ["net", "macros", "rt-multi-thread"] }
warp = "0.3.*"
serde_derive = "1.0.*"
serde = "1.0.*"
sqlx = { version = "0.6.*", features = [ "runtime-tokio-rustls", "sqlite" ] }
dotenv = "0.15.0"